# wictk

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.client_logger  Dockerfile.notifier  Makefile  README.md  docker-compose.yaml  renovate.json  requests.hurl
.github/workflows/: build-test-publish.yml  ci.yml  docker-publish-tagged.yml  docker-publish.yml  rust.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/alerts/: met.rs
backend/src/cache/: mod.rs  remote_cache.rs  timed_cache.rs
backend/src/handlers/: alerts.rs  lightning.rs  location.rs  mod.rs  nowcasts.rs  status.rs  test_utils.rs
backend/src/locations/: mod.rs
backend/src/nowcasts/: simple.rs
client_logger/: Cargo.toml  README.md
client_logger/src/: cli.rs  device.rs  hem.rs  main.rs  measurement.rs  sensor.rs  storage.rs
client_logger/src/device/: device_client.rs  device_error.rs  mod.rs
client_logger/src/measurement/: mod.rs  types.rs
client_logger/src/sensor/: mod.rs  sensor_client.rs  sensor_error.rs  types.rs
client_logger/src/storage/: mod.rs  storage_client.rs  storage_error.rs
client_logger/src/weather/: mod.rs  weather_client.rs  weather_error.rs
helm/wictk/: Chart.yaml  values.yaml
helm/wictk/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/wictk/templates/tests/: test-connection.yaml
load_test/: locustfile.py
notifier/: Cargo.toml
notifier/src/: alerts.rs  main.rs  notifications.rs
release/: cronjob.yaml  deployment.yaml  kustomization.yaml  service_loadbalancer.yaml
src/: handlers.rs  location.rs  main.rs  utils.rs  weather_alert.rs  weather_nowcast.rs
src/alerts/: alerts.rs  met.rs  mod.rs
src/cache/: cache.rs  mod.rs  timed_cache.rs
src/handlers/: alerts.rs  error.rs  location.rs  mod.rs  nowcasts.rs  status.rs
src/locations/: coordinates.rs  location.rs  mod.rs
src/nowcasts/: met.rs  mod.rs  nowcasts.rs  openweathermap.rs  simple.rs
src/weather/: alerts.rs  location.rs  mod.rs  nowcasts.rs
wictk_core/: Cargo.toml
wictk_core/src/: lib.rs
wictk_core/src/alerts/: met.rs  mod.rs
wictk_core/src/lightning/: lightning.rs  mod.rs
wictk_core/src/locations/: city.rs  coordinates.rs  location.rs
wictk_core/src/nowcasts/: met.rs  mod.rs  openweathermap.rs
