[package]
name = "wictk"
version = "0.5.1"
edition = "2021"
homepage = "https://github.com/Frixxie/wictk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["json", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
simple_logger = "5.0.0"
tokio = { version = "1.41.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full", "tracing"] }
tower-http = "0.6.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
