[package]
name = "backend"
version = "0.20.1"
edition = "2021"
homepage = "https://github.com/Frixxie/wictk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["json", "macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
geo = { version = "0.32.0", features = ["serde", "use-serde"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
moka = { version = "0.12.13", features = ["future"] }
redact = { version = "0.1.11", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive", "env"] }
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tower = { version = "0.5.3", features = ["full", "tracing"] }
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
wictk_core = {path = "../wictk_core"}

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
once_cell = "1.21.3"
