[package]
name = "backend"
version = "0.20.1"
edition = "2021"
homepage = "https://github.com/Frixxie/wictk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["json", "macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
geo = { version = "0.33.1", features = ["serde", "use-serde"] }
metrics = "0.24.5"
metrics-exporter-prometheus = "0.18.3"
moka = { version = "0.12.15", features = ["future"] }
redact = { version = "0.1.11", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive", "env"] }
tokio = { version = "1.52.2", features = ["full", "tracing"] }
tower = { version = "0.5.3", features = ["full", "tracing"] }
tower-http = "0.6.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
wictk_core = {path = "../wictk_core"}

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
once_cell = "1.21.4"
