[package]
name = "client_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
rayon = "1.11.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
structopt = { version = "0.3.26", features = ["color"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
wictk_core = {path = "../wictk_core"}

[dev-dependencies]
mockito = "1.7.1"
geo = "0.32.0"
