[package]
name = "client_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.0", features = ["derive", "env"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
wictk_core = {path = "../wictk_core"}

[dev-dependencies]
mockito = "1.7.2"
geo = "0.32.0"
