[package]
name = "client_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive", "env"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wictk_core = {path = "../wictk_core"}
tokio = { version = "1.52.1", features = ["full", "tracing"] }

[dev-dependencies]
mockito = "1.7.2"
geo = "0.32.0"
quickcheck = "1"
