[package]
name = "notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
wictk_core = {path = "../wictk_core"}
