[package]
name = "notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
structopt = { version = "0.3.26", features = ["color"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.48.0", features = ["full"] }
wictk_core = {path = "../wictk_core"}
