[package]
name = "wictk_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
geo = { version = "0.32.0", features = ["serde", "use-serde"] }
pretty_assertions = "1.4.1"
redact = { version = "0.1.11", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
utoipa = { version = "5", features = ["chrono"] }

[dev-dependencies]
mockito = "1.7.1"
