[package]
name = "wictk_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
geo = { version = "0.33.1", features = ["serde", "use-serde"] }
pretty_assertions = "1.4.1"
redact = { version = "0.1.11", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1.44"
utoipa = { version = "5", features = ["chrono"] }

[dev-dependencies]
mockito = "1.7.2"
